# booktest

./: .booktest.example  .coveragerc  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DVC_LOCAL_TESTING.md  DVC_QUICK_START.md  MANIFEST.in  METRIC_TRACKING_PROPOSAL.md  booktest.ini  booktest.manifest.yaml  development.md  do  do.py  getting-started.md  llms.txt  pyproject.toml  readme.md  setup_dvc_local.sh  shell.nix  workflows.md
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
books/: index.md
booktest/: __init__.py  cli.py  colors.py  config.py  dependencies.py  detection.py  env.py  functions.py  gpt_review.py  httpx.py  llm.py  llm_review.py  migrate.py  output.py  reports.py  requests.py  review.py  runs.py  selection.py  storage.py  testbook.py  testcaserun.py  testrun.py  tests.py
docs/: __init__.py.md  __main__.py.md  agent-guide.md  ai-review-config-example.ini  books.py.md  booktest.py.md  ci-cd.md  cli.py.md  config.py.md  dependencies.py.md  detection.py.md  env.py.md  features.md  functions.py.md  httpx.py.md  naming.py.md  reports.py.md  requests.py.md  review.py.md  runs.py.md  setup.py.md  snapshot-refactoring-plan.md  snapshot_storage_proposal.md  snapshots.py.md  testbook.py.md  testcaserun.py.md  testrun.py.md  tests.py.md  testsuite.py.md  use-cases.md  utils.py.md
examples/predictor/: README.md  booktest.ini  booktest.manifest.yaml  pyproject.toml
examples/predictor/books/: index.md
examples/predictor/books/book/predictor_book.py/PredictorBook/: test_predictor.md
test/: __booktest__.py  cli_test.py  tests.py  (+24 more)
(+536 files in other folders)
