[project]
name = "booktest"
version = "1.1.1"
authors = [{name = "Antti Rauhala", email = "antti@lumoa.me"}]
description = "Booktest is a snapshot testing library for review driven testing."
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "argcomplete>=3.0.0,<4.0.0",
    "coverage>=6.5.0,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "psutil>=6.1.1,<7.0.0",
]

[project.urls]
Homepage = "https://github.com/lumoa-oss/booktest"
Repository = "https://github.com/lumoa-oss/booktest"

[project.scripts]
booktest = "booktest.cli:main"

[dependency-groups]
test = [
    "matplotlib>=3.9.2,<4.0.0",
    "pycodestyle>=2.12.1,<3.0.0",
    "pytest>=8.3.4,<9.0.0",
    "openai>=1.109.1,<2.0.0",
    "anthropic>=0.40.0,<0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
