[project]
name = "booktest-example"
version = "0.0.1"
description = "example of using booktest"
authors = [{name = "Antti Rauhala", email = "antti@lumoa.io"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "booktest>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
